--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,15 @@ zuul.ignored-services=*
 zuul.routes.cadastro.path=/cadastro/**
 zuul.routes.cadastro.serviceId=cadastro
 zuul.routes.cadastro.strip-prefix=false
+zuul.routes.cadastro.custom-sensitive-headers=true
 
 zuul.routes.pedido.path=/pedido/**
 zuul.routes.pedido.serviceId=pedido
 zuul.routes.pedido.strip-prefix=false
+zuul.routes.pedido.custom-sensitive-headers=true
+
+zuul.routes.authentication.path=/authentication/**
+zuul.routes.authentication.serviceId=authentication
+zuul.routes.authentication.strip-prefix=false
+zuul.routes.authentication.custom-sensitive-headers=true
 
